Ip and Port functionalitu for DotChatWf

--- a/Server/History.txt
+++ b/Server/History.txt
@@ -56,3 +56,32 @@ Server: k is OFFLINE
 Server: Clear is ONLINE
 Clear: /Clear
 Server: Admin is ONLINE
+Server: 321 is ONLINE
+321: 213
+Server: 321 is OFFLINE
+Server: k is ONLINE
+k: 213
+k: 213
+k: 213
+Server: k is OFFLINE
+Server: Admin is ONLINE
+Admin: /Clear
+Server: k is ONLINE
+k: 7
+k: 7
+k: 7
+Server: k is ONLINE
+k: 1
+k: 1
+k: 1
+Server: k is OFFLINE
+Server: Admin is ONLINE
+Server: k is ONLINE
+k: 1
+Server: k is ONLINE
+k: 1
+k: 1
+Server: Admin is ONLINE
+Admin: 1
+Admin: 1
+Admin: /Clear
