Deleted some code which became unnecessary

--- a/Server/History.txt
+++ b/Server/History.txt
@@ -85,3 +85,46 @@ Server: Admin is ONLINE
 Admin: 1
 Admin: 1
 Admin: /Clear
+23: 23
+23: 32
+23: 233
+Server: 2 is ONLINE
+2: 123
+2: 123
+2: 123
+2: 123
+2: 123
+2: 123
+2: 123
+2: 123
+2: 123
+2: 123
+2: 123
+Server: k is ONLINE
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+k: 1
+1: 2
+3: 3
+Server: k is ONLINE
+Server: k is OFFLINE
+Server: k is ONLINE
